# finange-bot

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  bot.py  msg.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: python-app.yml  python-publish.yml
app/setup/: core.py  handlers.py
app/tax/argentina/: income_tax.py
app/tax/brazil/: beneficios.py  impostos.py  income_tax.py  irrf.py
